# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "otel_collector",
    srcs = ["otel_collector.cc"],
    hdrs = ["otel_collector.h"],
    deps = [
        "//:common",
        "//protos/google/cloud/opentelemetry/testing:observability_verification_cc_grpc",
        "//protos/google/cloud/opentelemetry/testing:observability_verification_cc_proto",
        "@googleapis//google/monitoring/v3:monitoring_cc_grpc",
        "@googleapis//google/monitoring/v3:monitoring_cc_proto",
        "@grpc//:grpc++",
    ],
)

cc_binary(
    name = "otel_collector_main",
    srcs = ["otel_collector_main.cc"],
    deps = [
        ":otel_collector",
        "@grpc//:grpc++",
    ],
)
