# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "verify_current_targets")

local_repository(
    name = "google_cloud_cpp",
    path = "../../",
)

load("@google_cloud_cpp//bazel:workspace0.bzl", "gl_cpp_workspace0")

gl_cpp_workspace0()

load("@google_cloud_cpp//bazel:workspace1.bzl", "gl_cpp_workspace1")

gl_cpp_workspace1()

load("@google_cloud_cpp//bazel:workspace2.bzl", "gl_cpp_workspace2")

gl_cpp_workspace2()

load("@google_cloud_cpp//bazel:workspace3.bzl", "gl_cpp_workspace3")

gl_cpp_workspace3()

load("@google_cloud_cpp//bazel:workspace4.bzl", "gl_cpp_workspace4")

gl_cpp_workspace4()

load("@google_cloud_cpp//bazel:workspace5.bzl", "gl_cpp_workspace5")

gl_cpp_workspace5()
